<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpiderTask</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter Your Message</string>
    <string name="button">Click Here!</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="show">Nothing was Entered</string>
    <string name="colour">Choose Colour</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="pink">cyan</string>
    <string name="font">Change Font Size</string>
    <string name="bold">Bold</string>
    <string name="italics">Italics</string>
    <string name="underlined">Underlined</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="number">29</string>
    <string name="edit_font">Enter Font</string>

</resources>
